--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,19 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="author" content="Sunny Ra">
+    <meta name="description" content="Sunny Ra is an Artist & Educator. She received her Master of Fine Arts at Hunter College, CUNY. She is currently the Museum Educator for K-12 and Community Programs for the Tang Museum at Skidmore College.">
+    <meta name="keywords" content="sunny ra, sunny, ra, artist, educator, education, saratoga springs, ny, skidmore, tang, museum, vts, visual, thinking, strategy, strategies, college, new york, manhattan, nyc, hunter, upenn, pafa, art, museum, dark, night, landscapes, paint, painting, oil, charcoal, canvas, paper, work, works, lva, louisville, ky, kentucky, visual, arts, bachelor, fine arts, cum laude, governors school for the arts, ">
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="alternate" hreflang="en" href="https://sunny-ra.com" />
+    <link rel="canonical" href="https://sunny-ra.com"/>
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +27,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123780083-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    
+        gtag('config', 'UA-123780083-1');
+      </script>
+      
+    <title>Sunny Ra - Master Painter / Educator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
