Small changes and build folder added

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Sunny Ra">
     <meta name="description" content="Sunny Ra is an Artist & Educator. She received her Master of Fine Arts at Hunter College, CUNY. She is currently the Museum Educator for K-12 and Community Programs for the Tang Museum at Skidmore College.">
-    <meta name="keywords" content="sunny ra, sunny, ra, artist, educator, education, saratoga springs, ny, skidmore, tang, museum, vts, visual, thinking, strategy, strategies, college, new york, manhattan, nyc, hunter, upenn, pafa, art, museum, dark, night, landscapes, paint, painting, oil, charcoal, canvas, paper, work, works, lva, louisville, ky, kentucky, visual, arts, bachelor, fine arts, cum laude, governors school for the arts, ">
+    <meta name="keywords" content="sunny ra, sunny, ra, artist, educator, education, saratoga springs, ny, skidmore, tang, museum, vts, visual, thinking, strategy, strategies, college, new york, manhattan, nyc, hunter, upenn, pafa, art, museum, dark, night, landscapes, paint, painting, oil, charcoal, canvas, paper, work, works, lva, louisville, ky, kentucky, visual, arts, bachelor, fine arts, cum laude, governors school for the arts">
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -17,7 +17,7 @@
     <link rel="canonical" href="https://sunny-ra.com"/>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
