--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,14 @@
     <meta name="author" content="Sunny Ra">
     <meta name="description" content="Sunny Ra is an Artist & Educator. She received her Master of Fine Arts at Hunter College, CUNY. She is currently the Museum Educator for K-12 and Community Programs for the Tang Museum at Skidmore College.">
     <meta name="keywords" content="sunny ra, sunny, ra, artist, educator, education, saratoga springs, ny, skidmore, tang, museum, vts, visual, thinking, strategy, strategies, college, new york, manhattan, nyc, hunter, upenn, pafa, art, museum, dark, night, landscapes, paint, painting, oil, charcoal, canvas, paper, work, works, lva, louisville, ky, kentucky, visual, arts, bachelor, fine arts, cum laude, governors school for the arts">
-    <!-- <link rel="apple-touch-icon" href="logo192.png" /> -->
+
+    <link rel="apple-touch-icon" href="logo192-ra.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="alternate" hreflang="en" href="https://sunny-ra.com" />
-    <link rel="canonical" href="https://sunny-ra.com"/>
+    <link rel="alternate" hreflang="en" href="https://sunny-ra.com/" />
+    <link rel="canonical" href="https://sunny-ra.com/"/>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
